Fixed #1 alignment issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -219,7 +219,7 @@ ul {
 		font-size: 32px;
 		width: 100%;
 
-		@media (min-width: $screen-md-min) {
+		@media (min-width: $screen-lg-min) {
 			margin-left: -10%;
 			width: 120%;
 		}
@@ -431,7 +431,11 @@ ul {
 		@media (min-width: $screen-md-min) {
 			width: 70%;
 			margin-left: 15%;
-			max-width: 950px;
+		}
+
+		@media (min-width: $screen-lg-min) {
+			width: 50%;
+			margin-left: 25%;
 		}
 
 		.thumb {
@@ -654,9 +658,23 @@ ul {
 
 
 .footer {
-	width: 70%;
-	max-width: 950px;
-	margin-left: 15%;
+	width: 100%;
+	margin-left: 0%;
+
+	@media (min-width: $screen-sm-min) {
+		width: 90%;
+		margin-left: 5%;
+	}
+
+	@media (min-width: $screen-md-min) {
+		width: 80%;
+		margin-left: 10%;
+	}
+
+	@media (min-width: $screen-lg-min) {
+		width: 70%;
+		margin-left: 15%;
+	}
 
 	div {
 		color: $light-medium;
